--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Stud</string>
+    <string name="type">Type</string>
+    <string name="day">Day</string>
+    <string name="hours">Hours</string>
 </resources>
